<resources>
    <string name="app_name">Contacts2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email1">Email :</string>
    <string name="name">Name</string>

    <string name="dummy_email">dummy email</string>
    <string name="dummy_phone">dummy phone</string>
    <string name="dummy_name">dummy name</string>

</resources>
