<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/card_view_margin"
        android:layout_marginRight="@dimen/card_view_margin"
        android:layout_marginBottom="@dimen/card_view_margin"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp20"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:text="@string/dummy_name"
                android:textSize="@dimen/sp20"
                app:layout_constraintLeft_toRightOf="@id/nameLabel"
                app:layout_constraintTop_toTopOf="@id/nameLabel" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp20"
                app:layout_constraintLeft_toLeftOf="@id/nameLabel"
                app:layout_constraintRight_toRightOf="@id/nameLabel"
                app:layout_constraintTop_toBottomOf="@id/nameLabel" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:text="@string/dummy_phone"
                android:textSize="@dimen/sp20"
                app:layout_constraintBottom_toBottomOf="@id/phoneLabel"
                app:layout_constraintLeft_toRightOf="@id/phoneLabel"
                app:layout_constraintTop_toTopOf="@id/phoneLabel" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp20"
                app:layout_constraintLeft_toLeftOf="@id/phoneLabel"
                app:layout_constraintRight_toRightOf="@id/phoneLabel"
                app:layout_constraintTop_toBottomOf="@id/phoneLabel" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_email"
                android:textSize="@dimen/sp20"
                app:layout_constraintLeft_toRightOf="@id/emailLabel"
                app:layout_constraintTop_toBottomOf="@id/phoneText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>